# Project

Robot_Aircraft_Competition/: README.md
Robot_Aircraft_Competition/src/ftm_planning/: CMakeLists.txt  package.xml
Robot_Aircraft_Competition/src/ftm_planning/launch/: bluetooth.launch  flight_real.launch  flight_realcheongju.launch  flight_sim.launch  flight_simcheongju.launch  px4_realFlight.launch  px4_sim.launch
Robot_Aircraft_Competition/src/ftm_planning/msg/: MR_log.msg  Mission_arrive.msg
Robot_Aircraft_Competition/src/ftm_planning/script/: .~lock.bluetoothConnecter.py#  bluetoothConnecter.py  cord_transfomer.py
Robot_Aircraft_Competition/src/ftm_planning/src/: avoidance_operator.cpp  avoidance_simulator.cpp  diagnose.cpp  local_planner.cpp  logger.cpp  mission_planner.cpp  setpoint_test.cpp
connected_car/: .gitignore
connected_car/src/mid_term/: CMakeLists.txt  package.xml
connected_car/src/mid_term/ShellScripts/: launch.sh
connected_car/src/mid_term/action/: Action1.action
internship/: Semantic_LaneLabeling.ipynb  final.ipynb
sw_schloar/: vertical_park.cpp
sw_schloar/omoros/: CMakeLists.txt  README.md  README_KR.md  middle.py  parking1.py
sw_schloar/omoros/launch/: drive_r1.launch  lidar.launch  testdrive.launch
sw_schloar/omoros/scripts/: case1.py  pub_good.py  pub_original.py  pub_sign_1005.py  pub_teleop.py  pub_teleopkey_3.py
sw_schloar/srf08/us_publisher/: CMakeLists.txt  package.xml
sw_schloar/srf08/us_publisher/src/: us_publisher.cpp
sw_schloar/srf08/us_subscriber/: CMakeLists.txt  package.xml
(+14 files in other folders)
